deploy/apps/kartograph/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kartograph-api
  labels:
    app.kubernetes.io/component: api
spec:
  selector:
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
