deploy/apps/kartograph/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kartograph-postgres
  labels:
    app.kubernetes.io/component: database
spec:
  selector:
    app.kubernetes.io/component: database
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
