deploy/apps/kartograph/base/spicedb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kartograph-spicedb
  labels:
    app.kubernetes.io/component: authorization
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: kartograph-spicedb-tls
spec:
  selector:
    app.kubernetes.io/component: authorization
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
      protocol: TCP
    - name: http
      port: 8443
      targetPort: 8443
      protocol: TCP
